# ai-for-developers-project-387

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  nightly-audit.yml  opencode.yml  release-please.yml
api/: main.tsp  models.tsp  package-lock.json  package.json  routes.tsp
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: config.py  ensure_db.py  main.py  seed.py
backend/app/adapters/: database.py  orm.py  repositories.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1e26fa4aec51_init_create_event_types_bookings_owner_.py
backend/app/api/: bookings.py  dependencies.py  errors.py  event_types.py  health.py  owner.py  schemas.py
backend/app/domain/: interfaces.py  models.py  slots.py
backend/tests/: conftest.py  fake_owner.py  fakes.py  test_bookings_api.py  test_contract.py  test_domain.py  test_event_types_api.py  test_fakes.py  test_health.py  test_owner_api.py  test_repositories_integration.py
deploy/: entrypoint.sh  nginx.conf.template
frontend/: .prettierignore  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: booking.spec.ts  helpers.ts  slot-overlap.spec.ts
frontend/src/: App.test.tsx  App.tsx  RoleContext.tsx  main.tsx  router.tsx
frontend/src/api/: client.ts  (+1 more)
frontend/tests/: AdminBookings.tsx  AdminEventTypes.tsx  App.tsx  BookSlot.tsx  BookingForm.tsx  EventTypeDetail.tsx  setupTests.ts  testWrapper.tsx
(+8 files in other folders)
